--- a/package.json
+++ b/package.json
@@ -1,91 +1,84 @@
 {
-	"name": "stacked-mvvm",
-	"displayName": "Flutter Stacked MVVM",
-	"description": "This plugin is based on filledstacked Stacked architecture. MVVM code generators used in conjunction with the Stacked plugin. ",
-	"version": "1.1.2",
-	"engines": {
-		"vscode": "^1.47.0"
-	},
-	"publisher": "AdityaJoshi",
-	"categories": [
-		"Other"
-	],
-	"keywords": [
-		"Flutter",
-		"MVVM",
-		"Stacked Architecture",
-		"Code generator",
-		"Snippet"
-	],
-	"license": "MIT",
-	"homepage": "https://github.com/adityajoshi12/Flutter-Stacked",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/adityajoshi12/Flutter-Stacked"
-	},
-	"bugs": {
-		"url": "https://github.com/adityajoshi12/Flutter-Stacked/issues"
-	},
-	"activationEvents": [
-		"onCommand:stacked-mvvm.createViews",
-		"onCommand:stacked-mvvm.initializeArchitecture",
-		"onCommand:stacked-mvvm.createWidgets",
-		"onCommand:stacked-mvvm.createSmartWidgets"
-	],
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "stacked-mvvm.createViews",
-				"title": "Create View",
-				"category": "Flutter Stacked"
-			},
-			{
-				"command": "stacked-mvvm.initializeArchitecture",
-				"title": "Initialize Stacked",
-				"category": "Flutter Stacked"
-			},
-			{
-				"command": "stacked-mvvm.createWidgets",
-				"title": "Create Widget",
-				"category": "Flutter Stacked"
-			},
-			{
-				"command": "stacked-mvvm.createSmartWidgets",
-				"title": "Create Smart Widget",
-				"category": "Flutter Stacked"
-			}
-		]
-	},
-	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"lint": "eslint src --ext ts",
-		"watch": "tsc -watch -p ./",
-		"pretest": "npm run compile && npm run lint",
-		"test": "node ./out/test/runTest.js"
-	},
-	"devDependencies": {
-		"@types/glob": "^7.1.1",
-		"@types/js-yaml": "^3.12.5",
-		"@types/lodash": "^4.14.157",
-		"@types/mocha": "^7.0.2",
-		"@types/node": "^13.11.0",
-		"@types/shelljs": "^0.8.8",
-		"@types/vscode": "^1.47.0",
-		"@typescript-eslint/eslint-plugin": "^2.30.0",
-		"@typescript-eslint/parser": "^2.30.0",
-		"eslint": "^6.8.0",
-		"glob": "^7.1.6",
-		"mocha": "^7.1.2",
-		"typescript": "^3.8.3",
-		"vscode-test": "^1.3.0"
-	},
-	"dependencies": {
-		"js-yaml": "^3.14.0",
-		"lodash": "^4.17.21",
-		"shelljs": "^0.8.5",
-		"spawn-command": "0.0.2-1"
-	},
-	"icon": "assets/logo.png"
+  "name": "stacked-mvvm",
+  "displayName": "Flutter Stacked MVVM",
+  "description": "This plugin is based on filledstacked Stacked architecture. MVVM code generators used in conjunction with the Stacked plugin. ",
+  "version": "1.1.2",
+  "engines": {
+    "vscode": "^1.70.0"
+  },
+  "publisher": "AdityaJoshi",
+  "categories": [
+    "Other"
+  ],
+  "keywords": [
+    "Flutter",
+    "MVVM",
+    "Stacked Architecture",
+    "Code generator",
+    "Snippet"
+  ],
+  "license": "MIT",
+  "homepage": "https://github.com/adityajoshi12/Flutter-Stacked",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/adityajoshi12/Flutter-Stacked"
+  },
+  "bugs": {
+    "url": "https://github.com/adityajoshi12/Flutter-Stacked/issues"
+  },
+  "activationEvents": [
+    "onCommand:stacked-mvvm.createViews",
+    "onCommand:stacked-mvvm.initializeArchitecture",
+    "onCommand:stacked-mvvm.createWidgets"
+  ],
+  "main": "./out/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "stacked-mvvm.createViews",
+        "title": "Create View",
+        "category": "Flutter Stacked"
+      },
+      {
+        "command": "stacked-mvvm.initializeArchitecture",
+        "title": "Initialize Stacked",
+        "category": "Flutter Stacked"
+      },
+      {
+        "command": "stacked-mvvm.createWidgets",
+        "title": "Create Widget",
+        "category": "Flutter Stacked"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "lint": "eslint src --ext ts",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile && npm run lint",
+    "test": "node ./out/test/runTest.js"
+  },
+  "devDependencies": {
+    "@types/glob": "^7.2.0",
+    "@types/js-yaml": "^3.12.7",
+    "@types/lodash": "^4.14.184",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.13.52",
+    "@types/shelljs": "^0.8.11",
+    "@types/vscode": "^1.70.0",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "eslint": "^6.8.0",
+    "glob": "^7.2.3",
+    "mocha": "^7.2.0",
+    "vscode-test": "^1.6.1"
+  },
+  "dependencies": {
+    "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
+    "shelljs": "^0.8.5",
+    "spawn-command": "0.0.2-1"
+  },
+  "icon": "assets/logo.png"
 }
