--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,9 @@
 		"lib": [
 			"es6"
 		],
-		"sourceMap": true,
+		"sourceMap": false,
 		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
+		"strict": false   /* enable all strict type-checking options */
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
